--- a/bio.html
+++ b/bio.html
@@ -3,8 +3,13 @@
 <head>
 	<title>Deanna Baris Bio</title>
 	<meta charset="utf-8">
+	<link href="style.css" rel="stylesheet" />	
+	<link href="bio.css" rel="stylesheet" />	
 </head>
 <body>
-	<h1>bio page!</h1>
+	<h1>Deanna Baris</h1>
+	<h2>BIO</h2>
+	<p> Deanna Baris is a junior at Tufts University majoring in Computer Science & Architectural Studies. Born in Westport, CT, she loves both computers and buildings of all shapes and sizes. When she manages to escape from the computer lab, she can be found experimenting in the kitchen, painting, or exploring the city Somerville on her trusty bike. </p>
+
 </body>
 </html>
