file extension fixed

--- a/bio.html
+++ b/bio.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Deanna Baris</h1>
 	<h2>BIO</h2>
-	<p> Deanna Baris is a junior at Tufts University majoring in Computer Science & Architectural Studies. Born in Westport, CT, she loves both computers and buildings of all shapes and sizes. When she manages to escape from the computer lab, she can be found experimenting in the kitchen, painting, or exploring the city Somerville on her trusty bike. </p>
+	<p> Deanna Baris is a junior at Tufts University majoring in Computer Science & Architectural Studies. Born in Westport, CT, she loves both computers and buildings of all shapes and sizes. When she manages to escape from the computer lab, she can be found experimenting in the kitchen, painting, or exploring the city of Somerville on her trusty bike. </p>
 
 </body>
 </html>
