--- a/bio.html
+++ b/bio.html
@@ -3,24 +3,36 @@
 <head>
 	<title>Deanna Baris</title>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Abril+Fatface|Satisfy" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" />	
 	<link href="bio.css" rel="stylesheet" />	
 </head>
 <body>
-	<h1><a href="index.html">Deanna Baris</a></h1>
-	<div id="menu"> 
-		<div class="pagelinks"><a href="bio.html">Bio</a></div>
-		<div class="pagelinks"><a href="resume.html">Resume</a></div>
-		<div class="pagelinks"><a href="skills.html">Skills</a></div>
-		<div class="pagelinks"><a href="https://github.com/dbaris">Github</a></p>
-	</div>
-	<div id="divbar">
-	__________________________________________________________________
+	<div class="header">
+		<div id="name">
+		<h1><a class="title" href="index.html">DEANNA <br/> BARIS</a></h1>
+		</div>
+
+		<div id="menu"> 
+			<div class="pagelinks" ><a id="bio" href="bio.html">Bio</a></div>
+			<div class="pagelinks" ><a id="resume" href="resume.html">Resume</a></div>
+			<div class="pagelinks"><a id="skills" href="skills.html">Skills</a></div>
+			<div class="pagelinks"><a id="github" href="https://github.com/dbaris">Github</a></div>
+		</div>
 	</div>
 
-	<h2>Bio</h2>
-	<p> Deanna Baris is a junior at Tufts University majoring in Computer Science & Architectural Studies. Born in Westport, CT, she loves both computers and buildings of all shapes and sizes. When she manages to escape from the computer lab, she can be found experimenting in the kitchen, hosting a radio show on WMFO 91.5, painting, or exploring the city of Somerville on her trusty bike. </p>
+
+	<div id="bioPage">
+	<div id="image">
+		<img src="images/itme.jpg" alt="personal picture">
+	</div>
+
+	<div id="bioText">
+	<p> Deanna Baris is a senior at Tufts University majoring in Computer Science & Architectural Studies. Born in Westport, CT, she loves both computers and buildings of all shapes and sizes. When she manages to escape from the computer lab, she can be found experimenting in the kitchen, hosting a radio show on WMFO 91.5, painting, or exploring the city of Somerville on her trusty bike. </p>
+	<!-- <h2 class="pageTitle">BIO</h2> -->
+	</div>
+	</div>
 
 	
 	
