--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
 	</div> <!-- header -->
 	
 	<div id="page">
-		<img id="image" src="images/pic.jpg" alt="personal picture">
+		<img class="bioImage image" src="images/pic.jpg" alt="personal picture">
 		<div id="bio"><p id="bioP"> Deanna Baris is a Boston-based software engineer and artist. She graduated from Tufts University in 2018 with a double major in Computer Science and Architectural Studies. Deanna is currently a Software Engineer on the Linux endpoint team for the security business unit (formerly Carbon Black) at VMWare. After work, you can find her painting, knitting, sewing, or finding innovative new ways to create mess. Follow along at <a id="insta" href="https://www.instagram.com/growing__paints/">@growing__paints</a></p></div>
 	
 	</div> <!-- page --> 
